feat: fix bug checking id patch url, add docs
